# electronics-shop-project

./: .coverage 2  pyproject.toml
homework-1/: main.py
homework-2/: main.py
homework-3/: main.py
homework-4/: coverage.txt  main.py
homework-5/: main.py  test_results.txt
homework-6/: main.py  test_results.txt
src/: instantiate_csv_error.py  item.py  keyboard.py  phone.py
tests/: files.py  incorrect_file.csv  something.py  test_item.py  test_keyboard.py  test_phone.py
