[tool.poetry]
name = "electronics-shop-project"
version = "0.1.0"
description = ""
authors = ["Andrew Skow <skovorodnikov11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
accessify = "^0.3.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
